fixed layout issues for network pub ids

--- a/server/public/css/forms.scss
+++ b/server/public/css/forms.scss
@@ -391,10 +391,14 @@ form#campaign_and_adgroup {
                 }
                 > label {
                     font-weight: 600;
+                    vertical-align: top;
                     width: 200px;
                 }
                 input[type="text"] {
                     width: 200px;
+                }
+                span {
+                    vertical-align: top;
                 }
                 ul {
                     list-style-type: none;
@@ -404,6 +408,7 @@ form#campaign_and_adgroup {
                     padding: 0px 20px;
                     li {
                         height: 30px;
+                        width: 400px;
                         margin: 0;
                         label {
                             width: 180px;
