--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1512,9 +1512,12 @@ form#campaign_and_adgroup ul#apps {
         text-overflow: ellipsis; }
       form#campaign_and_adgroup ul#apps > li > div > label {
         font-weight: 600;
+        vertical-align: top;
         width: 200px; }
       form#campaign_and_adgroup ul#apps > li > div input[type="text"] {
         width: 200px; }
+      form#campaign_and_adgroup ul#apps > li > div span {
+        vertical-align: top; }
       form#campaign_and_adgroup ul#apps > li > div ul {
         list-style-type: none;
         overflow: auto;
@@ -1523,6 +1526,7 @@ form#campaign_and_adgroup ul#apps {
         padding: 0px 20px; }
         form#campaign_and_adgroup ul#apps > li > div ul li {
           height: 30px;
+          width: 400px;
           margin: 0; }
           form#campaign_and_adgroup ul#apps > li > div ul li label {
             width: 180px; }
